# istio-api-rs-codegen

./: .gitignore  .gitmodules  Cargo.toml  adjust.py  constant.py  generate.py  main.py  makefile  readme.md  todo.md
openapi-json/: readme.md
openapi-json/1_10/: clean.sh  setup.sh
openapi-json/1_10/networking/v1alpha3/: destination_rule.gen.json  envoy_filter.gen.json  gateway.gen.json  service_entry.gen.json  sidecar.gen.json  virtual_service.gen.json  workload_entry.gen.json  workload_group.gen.json
openapi-json/1_10/networking/v1beta1/: destination_rule.gen.json  gateway.gen.json  service_entry.gen.json  sidecar.gen.json  virtual_service.gen.json  workload_entry.gen.json
openapi-json/1_10/security/v1beta1/: authorization_policy.gen.json  peer_authentication.gen.json  request_authentication.gen.json
openapi-json/1_10/type/v1beta1/: workload_selector.gen.json
openapi-json/1_11/: setup.sh
openapi-json/1_11/networking/v1alpha3/: destination_rule.gen.json  envoy_filter.gen.json  (+3 more)
openapi-json/1_12/: setup.sh
openapi-json/1_13/: setup.sh
openapi-json/1_14/: setup.sh
openapi-json/1_15/: setup.sh
py-codegen/: modify.py  prune.py  util.py
src/: main.rs
src/adjust/: adva.rs  mod.rs  tena.rs
src/args/: mod.rs
src/constant/: mod.rs
src/cue/: cuge.rs  mod.rs
src/error/: mod.rs
src/fetcher/: mod.rs
src/generator/: mod.rs
src/git/: mod.rs
src/meta/: mod.rs
src/openapi/: mod.rs
src/option/: mod.rs
src/resolver/: mod.rs
src/tree/: mod.rs
src/type/: mod.rs
src/util/: mod.rs  opai.rs
src/utility/: istio_version.rs  mod.rs
(+110 files in other folders)
