[package]
name = "istio-api-rs-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
yaml-rust = "0.4"
regex = "1.6"