[package]
name = "istio-api-rs-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
thiserror = "1.0"
exitcode = "1.1"
clap = { version = "3.2", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
k8s-openapi = { version = "0.15", features = ["v1_24"] }
regex = "1.6"
phf = { version = "0.11.1", features = ["macros"]}